--- a/src/Auth/LoginForm.fxml
+++ b/src/Auth/LoginForm.fxml
@@ -44,7 +44,10 @@
             </Label>
             <TextField id="login_text" layoutX="14.0" layoutY="69.0" prefHeight="40.0" prefWidth="237.0" promptText="Пользователь" styleClass="text_input" stylesheets="@../css/LoginFormCss.css" />
             <PasswordField id="pass_text" layoutX="14.0" layoutY="137.0" prefHeight="40.0" prefWidth="237.0" promptText="Пароль" styleClass="text_input" stylesheets="@../css/LoginFormCss.css" />
-            <Button id="btn_login" layoutX="65.0" layoutY="203.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="135.0" stylesheets="@../css/LoginFormCss.css" text="Войти" textFill="WHITE" />
+            <Button id="btn_login" fx:id="btn_login" layoutX="65.0" layoutY="203.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="135.0" stylesheets="@../css/LoginFormCss.css" text="Войти" textFill="WHITE" />
+            <Label layoutX="46.0" layoutY="42.0" text="Пожалуйста, войдите в систему" textFill="#002e39" />
+            <Label layoutX="123.0" layoutY="247.0" text="или" textFill="#002d39" />
+            <Button id="btn_register" fx:id="btn_register" layoutX="67.0" layoutY="266.0" mnemonicParsing="false" prefHeight="0.0" prefWidth="135.0" stylesheets="@../css/LoginFormCss.css" text="Зарегистрироваться" textFill="#ff6e76" />
          </children>
       </AnchorPane>
    </children>
