--- a/src/Main/TaskScreen/TaskScreen.fxml
+++ b/src/Main/TaskScreen/TaskScreen.fxml
@@ -15,11 +15,21 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="530.0" prefWidth="710.0" style="-fx-background-color: #dbdbdb;" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.TaskScreen.TaskScreenController">
+<AnchorPane prefHeight="530.0" prefWidth="710.0" style="-fx-background-color: #dbdbdb;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.TaskScreen.TaskScreenController">
    <children>
       <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
          <children>
-            <ListView fx:id="listView_tasks" maxWidth="1.7976931348623157E308" prefHeight="530.0" prefWidth="316.0" />
+            <VBox>
+               <children>
+                  <ListView fx:id="listView_tasks" maxWidth="1.7976931348623157E308" prefHeight="530.0" prefWidth="316.0" />
+                  <HBox>
+                     <children>
+                        <Button fx:id="btn_addTask" mnemonicParsing="false" text="+" />
+                        <Button fx:id="btn_rmTask" mnemonicParsing="false" text="-" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
             <AnchorPane fx:id="taskFieldsWin" minHeight="300.0" minWidth="300.0" prefHeight="530.0" prefWidth="378.0">
                <children>
                   <VBox layoutX="20.0" layoutY="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
